# e2e-bi-tutorial

./: README.md  docker-compose.yaml  pyproject.toml
e2e_bi_tutorial/dagster/e2e_bi_tutorial/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
e2e_bi_tutorial/dagster/e2e_bi_tutorial/e2e_bi_tutorial/: __init__.py  dbt_assets.py  meltano.py
e2e_bi_tutorial/dbt/e2e_bi_tutorial/: .user.yml  dbt_project.yml  profiles.yml
e2e_bi_tutorial/dbt/e2e_bi_tutorial/models/marts/: marts_iceberg.yml  marts_iceberg__general.sql  marts_iceberg__marketing.sql  marts_iceberg__payment.sql
e2e_bi_tutorial/dbt/e2e_bi_tutorial/models/staging/: stg_iceberg.yml  stg_iceberg__customers.sql  stg_iceberg__orders.sql  stg_iceberg__products.sql  stg_iceberg__stores.sql
e2e_bi_tutorial/meltano/: meltano.yml
e2e_bi_tutorial/meltano/extract/: example_csv_files_def.json
trino/etc/catalog/: iceberg.properties
